<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.presentation.view.fragment.TeacherSaveDetailFragment">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/header_parent"
        layout="@layout/quiz_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

    <com.auro.scholr.core.util.uiwidget.RPTextView
        android:id="@+id/RPTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_more_details"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:Font="Poppins-Regular.ttf"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/header_parent"
        app:layout_constraintTop_toBottomOf="@+id/header_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RPTextView">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8.2"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilteachertxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:layout_marginRight="@dimen/_10sdp"
                    >

                    <com.auro.scholr.core.util.uiwidget.RPEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/teacher_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:Font="Poppins-Regular.ttf" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/icteachername"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_check"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_document_layout"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiledittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:layout_marginRight="@dimen/_10sdp">

                <com.auro.scholr.core.util.uiwidget.RPEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:Font="Poppins-Regular.ttf" />

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/icemail"
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_document_layout"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilmobiletxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:layout_marginRight="@dimen/_10sdp">

                <com.auro.scholr.core.util.uiwidget.RPEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/mobile_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:Font="Poppins-Regular.ttf" />

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/icmobilenumber"
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_document_layout"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.auro.scholr.core.util.uiwidget.RPTextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:text="@string/next"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:background="@drawable/border_selector_blue"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.auro.scholr.core.util.uiwidget.RPTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_for_now"
        android:textColor="@color/black"
        app:Font="Poppins-Regular.ttf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.38" />


</androidx.constraintlayout.widget.ConstraintLayout>